# django-q-dot-import

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
django_q_dot_import/: __init__.py  dot_import.py
