[metadata]
name = django-q-dot-import
version = attr: django-q-dot-import.VERSION
author = Rory
author_email = rory@jragon.co.uk
description = Plug in
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = django-q, sentry
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    importlib-metadata; python_version<"3.11"

[options.packages.find]
exclude =
    dist*
    build*
    docs*
    .venv*# Inside of setup.cfg
